--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*CSS file for to-do list project*/
-/*--Developed by Rakshan A Jain, Vaidik S Prabhu and Suraj Pai K*/
+/*--Developed by Suraj Pai K*/
 
 
 /*Removing all the pre-defined styles*/
